--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -56,7 +56,7 @@ jobs:
         run: yarn install --frozen-lockfile --production
 
       - run: |
-          SETUPTOOLS_USE_DISTUTILS=stdlib python setup.py bdist_wheel --build-number 0
+          python setup.py bdist_wheel --build-number 0
           cp requirements-frozen.txt dist/
 
       - run: docker login --username '${{ github.actor }}' --password-stdin ghcr.io <<< "$GHCR_TOKEN"
